--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,6 +16,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:src="@drawable/profile" />
+    <ProgressBar
+        android:id="@+id/progressBar_khachhang_capnhatthongtin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/txtEmail"
